<resources>
    <string name="app_name">PhotoClips</string>Welcome to photoClips
    <string name="Welcome_Start">Get start</string>
    <string name="Welcome_text1">Hi,</string>
    <string name="Welcome_text2">This is Photoclips,</string>
    <string name="Welcome_text3">Welcome </string>
    <string name="NextStep">Next Step</string>
    <string name="Convert">Convert</string>
    <string name="Adjust">You can adjust your picture by your finger</string>
    <string name="Save">Save picture</string>
    <string name="Successful">The picture has successfully upload</string>
    <string name="Uploadinfo">Please upload 1-7 pictures</string>
    <string name="OverMaximum">You can only upload 8 pictures maximum</string>
    <string name="ConvertFirst">Please convert all pictures first</string>
    <string name="NotExist">The next picture does not exist</string>
    <string name="Confirm">Confirm</string>
    <string name="Cancel">Cancel</string>
    <string name="Sure">Are you sure that you want to delete this picture?</string>
    <string name="Edit">Do you want to edit this picture?</string>
    <string name="Load">Loading</string>
    <string name="Delete">delete</string>
    <string name="Clear">Clear</string>
    <string name="DialogConfirm">Remain</string>
    <string name="Nextpic">Next</string>
    <string name="title_activity_converting">ConvertingActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>