<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/pink"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/Welcome_text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/Mainfontsize"
                android:textStyle="bold"
                android:text="@string/Welcome_text1" />
            <TextView
                android:id="@+id/Welcome_text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/Mainfontsize"
                android:textStyle="bold"
                android:text="@string/Welcome_text2" />
            <TextView
                android:id="@+id/Welcome_text3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/Mainfontsize"
                android:textStyle="bold"
                android:text="@string/Welcome_text3" />
        </LinearLayout>


        <Button
            android:id="@+id/Welcome_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/Get_Start"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@drawable/button"
            android:text="@string/Welcome_Start" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

    </LinearLayout>


</LinearLayout>